--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -105,8 +105,7 @@
   "caring_by": "Nhân viên chăm sóc",
   "caring_e_learners": "Danh sách học viên e-learning đang chăm",
   "caring_learners": "Danh sách học viên đang chăm sóc",
-  "caring_staff": "Nhân viên đang chăm",
-  "category": "Danh mục",
+"category": "Danh mục",
   "category_icon": "Icon danh mục",
   "category_name": "Tên danh mục",
   "certificate": "Chứng chỉ",
@@ -156,6 +155,8 @@
   "course_type": "Loại khoá học",
   "courses": "Khóa học",
   "cpa": "CPA",
+  "create_catalog": "Tạo mới danh mục bảng giá",
+  "create_price_list": "Tạo mới bảng giá",
   "created_at": "Ngày đăng ký",
   "created_by": "Người tạo",
   "created_date": "Ngày tạo",
@@ -169,6 +170,7 @@
   "customers": "Khách hàng",
   "data_process_type": "Kiểu chia data",
   "date_of_birth": "Ngày sinh",
+  "deactivate": "Tạm dừng",
   "demand": "Nhu cầu",
   "deny": "Từ chối",
   "deposit_count": "Số người đặt cọc",
@@ -272,6 +274,34 @@
   "gift_course": "Tặng khóa học",
   "gift_membership": "Tặng gói thành viên",
   "growth": "Tăng trưởng",
+  "guide_group_permission_activate": "Hãy luôn đảm bảo nhóm quyền của tổ chức ở trạng thái kích hoạt. Bạn cũng có thể vô hiệu nhóm quyền khi muốn hạn chế quyền hạn của nhân sự.",
+  "guide_group_permission_add_new": "Hãy ấn vào nút Thêm mới này để chuyển đến trang Thêm mới nhóm quyền.",
+  "guide_group_permission_name": "Hãy đặt tên theo chức vụ, ví dụ trưởng phòng nhân sự, trưởng phòng sale, nhân viên sale...",
+  "guide_group_permission_pick": "Việc nhóm nhiều quyền nhỏ lại thành một nhóm quyền mang ý nghĩa giống như bạn tạo ra một chức vụ và trao cho họ một số các quyền hạn nhất định trong tổ chức của bạn.",
+  "guide_header_menu_name": "Đây là tên nút bấm sẽ hiện ra ở thanh menu đầu trang như trang chủ, giới thiệu, khóa học...",
+  "guide_header_menu_parent_link": "Nếu muốn nút bấm này là thư mục con (category) nằm trong 1 nút bấm khác (navigation) thì hãy chọn phần này, nếu không thì để trống.",
+  "guide_header_menu_position": "Thứ tự hiển thị trên thanh menu. Tính từ trái qua phải",
+  "guide_header_menu_status": "Nếu bật, nút bấm sẽ hiện lên ở thanh menu. Nếu tắt, nút bấm này sẽ ẩn đi.",
+  "guide_organization_address": "Nhập địa chỉ trụ sở hoặc văn phòng tổ chức của bạn. Thông tin này sẽ hiện ra ở trang liên hệ của tổ chức.",
+  "guide_organization_admin": "Đây là tài khoản Admin của hệ thống",
+  "guide_organization_email": "Đây là thông tin email của tổ chức để khách hàng liên hệ với tổ chức của bạn. Thông tin này sẽ hiện ra ở thanh menu và mục liên hệ ngoài trang chủ.",
+  "guide_organization_embed_map": "Nếu tổ chức của bạn đã cung cấp thông tin và địa điểm trên bản đồ google map, bạn hãy copy và dán mã nhúng vào đây. Thông tin về địa điểm tổ chức của bạn sẽ hiện ra ở trang liên hệ của tổ chức.",
+  "guide_organization_logo": "Các phần logo này sẽ hiển thị ở thanh chức năng bên trái của website quản trị và các trang nội dung khác.",
+  "guide_organization_name": "Tên tổ chức là thông tin sẽ hiện lên ở email, trang e-learning và các trang thông tin khác. Bạn có thể tùy chỉnh nó bất kỳ lúc nào.",
+  "guide_organization_phone": "Đây là thông tin số điện thoại của tổ chức để khách hàng liên hệ với tổ chức của bạn. Thông tin này sẽ hiện ra ở thanh menu và mục liên hệ ngoài trang chủ.",
+  "guide_organization_status": "Hãy luôn đảm bảo trạng thái của tổ chức đang được hoạt động.",
+  "guide_organization_withdrawal_limit": "Đây là hạn mức tối thiểu số tiền mà thành viên có thể rút về. Lưu ý: số tiền phải lớn hơn 0.",
+  "guide_page_content": "Đây là nội dung chính của trang. Bạn nên thuê người code web html hoặc liên hệ với đội ngũ hỗ trợ dịch vụ của chúng tôi. Hotline: 0969218765",
+  "guide_page_description": "Mô tả ngắn về nội dung của trang này.",
+  "guide_page_name": "Tên của trang con trong website của bạn",
+  "guide_website_background_footer": "Màu sắc của chân trang, nên tương phản với màu của logo, thường sẽ là màu tối.",
+  "guide_website_background_header": "Màu sắc của thanh menu, nên tương phản với màu của logo, thường sẽ là màu trắng.",
+  "guide_website_copyright": "Nội dung này sẽ hiện ra ở cuối trang chủ, thường sẽ là một dòng ngắn. Ví dụ: COPYRIGHT © (tên tổ chức) ALL RIGHTS RESERVED",
+  "guide_website_description": "Nội dung này sẽ hiện ra ở cuối trang, ngay dưới logo footer. Thông thường sẽ là thông tin giới thiệu ngắn về tổ chức của bạn.",
+  "guide_website_logo_footer": "Tải lên hình ảnh logo tổ chức của bạn ở dạng âm bản, thường là mầu trắng. Hình ảnh này sẽ hiện lên ở cuối trang.",
+  "guide_website_logo_header": "Tải lên hình ảnh logo tổ chức của bạn. Hình ảnh này sẽ hiện lên ở đầu trang",
+  "guide_website_name": "Hãy nhập tên website một cách ngắn gọn, dễ nhớ. Thường sẽ là tên tổ chức của bạn.",
+  "guide_website_social_links": "Link trang mạng xã hội của tổ chức. Những đường link này cần bao gồm cả https://www........",
   "has_account": "Đã có tài khoản",
   "has_discount": "Có chiết khấu",
   "homepage": "Trang chủ",
@@ -449,6 +479,7 @@
   "pick_a_year": "Chọn năm",
   "pick_permissions": "Danh sách quyền chọn",
   "pinned": "Ghim",
+  "platform_transfer": "Chuyển giao nền tảng",
   "point": "Thanh toán bằng điểm",
   "point_contest": "Cuộc thi tính điểm",
   "point_contest_list": "Danh sách cuộc thi tính điểm",
@@ -466,6 +497,10 @@
   "price_for_1_year": "1 năm",
   "price_for_3_months": "3 tháng",
   "price_for_lifetime": "Vĩnh viễn",
+  "price_list": "Bảng giá",
+  "price_list_categories": "Danh mục bảng giá",
+  "price_list_config": "Cấu hình bảng giá",
+  "price_name": "Tên bảng giá",
   "processed": "Đã xử lý",
   "product_course": "Sản phẩm/Khoá học",
   "product_group": "Nhóm sản phẩm",
@@ -575,6 +610,7 @@
   "seo_tags": "Thẻ SEO",
   "seo_title": "Tiêu đề SEO",
   "settings": "Thiết lập",
+  "settlement_date": "Ngày kết toán trong tháng",
   "share_caring_learners_to_others": "Được chia học viên chăm sóc",
   "short_description": "Mô tả ngắn",
   "show_price_in_1_month": "Hiển thị giá 1 tháng",
@@ -654,8 +690,10 @@
   "unregistered": "Chưa có tài khoản",
   "unsend": "Chưa gửi",
   "unverified": "Chưa xác thực",
+  "update_catalog": "Cập nhật danh mục bảng giá",
   "update_payment": "Cập nhật thanh toán",
   "update_permission_of_organization": "Cập nhật quyền tổ chức",
+  "update_price_list": "Cập nhât bảng giá",
   "upgrade_course": "Nâng cấp khoá học",
   "upgrade_package_discount": "Chiết khấu nâng cấp gói",
   "upgrade_request_list": "Danh sách yêu cầu nâng hạng",
@@ -750,44 +788,5 @@
   "zalo_messages_sent": "Đã gửi tin nhắn Zalo",
   "zoom_id": "ID phòng Zoom",
   "zoom_link": "Link Zoom",
-  "zoom_password": "Mật khẩu phòng Zoom",
-  "guide_organization_name": "Tên tổ chức là thông tin sẽ hiện lên ở email, trang e-learning và các trang thông tin khác. Bạn có thể tùy chỉnh nó bất kỳ lúc nào.",
-  "guide_organization_email": "Đây là thông tin email của tổ chức để khách hàng liên hệ với tổ chức của bạn. Thông tin này sẽ hiện ra ở thanh menu và mục liên hệ ngoài trang chủ.",
-  "guide_organization_phone": "Đây là thông tin số điện thoại của tổ chức để khách hàng liên hệ với tổ chức của bạn. Thông tin này sẽ hiện ra ở thanh menu và mục liên hệ ngoài trang chủ.",
-  "guide_organization_admin": "Đây là tài khoản Admin của hệ thống",
-  "guide_organization_address": "Nhập địa chỉ trụ sở hoặc văn phòng tổ chức của bạn. Thông tin này sẽ hiện ra ở trang liên hệ của tổ chức.",
-  "guide_organization_embed_map": "Nếu tổ chức của bạn đã cung cấp thông tin và địa điểm trên bản đồ google map, bạn hãy copy và dán mã nhúng vào đây. Thông tin về địa điểm tổ chức của bạn sẽ hiện ra ở trang liên hệ của tổ chức.",
-  "guide_organization_logo": "Các phần logo này sẽ hiển thị ở thanh chức năng bên trái của website quản trị và các trang nội dung khác.",
-  "guide_organization_status": "Hãy luôn đảm bảo trạng thái của tổ chức đang được hoạt động.",
-  "guide_organization_withdrawal_limit": "Đây là hạn mức tối thiểu số tiền mà thành viên có thể rút về. Lưu ý: số tiền phải lớn hơn 0.",
-  "guide_group_permission_pick": "Việc nhóm nhiều quyền nhỏ lại thành một nhóm quyền mang ý nghĩa giống như bạn tạo ra một chức vụ và trao cho họ một số các quyền hạn nhất định trong tổ chức của bạn.",
-  "guide_group_permission_add_new": "Hãy ấn vào nút Thêm mới này để chuyển đến trang Thêm mới nhóm quyền.",
-  "guide_group_permission_name": "Hãy đặt tên theo chức vụ, ví dụ trưởng phòng nhân sự, trưởng phòng sale, nhân viên sale...",
-  "guide_group_permission_activate": "Hãy luôn đảm bảo nhóm quyền của tổ chức ở trạng thái kích hoạt. Bạn cũng có thể vô hiệu nhóm quyền khi muốn hạn chế quyền hạn của nhân sự.",
-  "guide_website_name": "Hãy nhập tên website một cách ngắn gọn, dễ nhớ. Thường sẽ là tên tổ chức của bạn.",
-  "guide_website_copyright": "Nội dung này sẽ hiện ra ở cuối trang chủ, thường sẽ là một dòng ngắn. Ví dụ: COPYRIGHT © (tên tổ chức) ALL RIGHTS RESERVED",
-  "guide_website_logo_header": "Tải lên hình ảnh logo tổ chức của bạn. Hình ảnh này sẽ hiện lên ở đầu trang",
-  "guide_website_logo_footer": "Tải lên hình ảnh logo tổ chức của bạn ở dạng âm bản, thường là mầu trắng. Hình ảnh này sẽ hiện lên ở cuối trang.",
-  "guide_website_background_header": "Màu sắc của thanh menu, nên tương phản với màu của logo, thường sẽ là màu trắng.",
-  "guide_website_background_footer": "Màu sắc của chân trang, nên tương phản với màu của logo, thường sẽ là màu tối.",
-  "guide_website_social_links": "Link trang mạng xã hội của tổ chức. Những đường link này cần bao gồm cả https://www........",
-  "guide_website_description": "Nội dung này sẽ hiện ra ở cuối trang, ngay dưới logo footer. Thông thường sẽ là thông tin giới thiệu ngắn về tổ chức của bạn.",
-  "guide_page_name": "Tên của trang con trong website của bạn",
-  "guide_page_description": "Mô tả ngắn về nội dung của trang này.",
-  "guide_page_content": "Đây là nội dung chính của trang. Bạn nên thuê người code web html hoặc liên hệ với đội ngũ hỗ trợ dịch vụ của chúng tôi. Hotline: 0969218765",
-  "guide_header_menu_name": "Đây là tên nút bấm sẽ hiện ra ở thanh menu đầu trang như trang chủ, giới thiệu, khóa học...",
-  "guide_header_menu_position": "Thứ tự hiển thị trên thanh menu. Tính từ trái qua phải",
-  "guide_header_menu_status": "Nếu bật, nút bấm sẽ hiện lên ở thanh menu. Nếu tắt, nút bấm này sẽ ẩn đi.",
-  "guide_header_menu_parent_link": "Nếu muốn nút bấm này là thư mục con (category) nằm trong 1 nút bấm khác (navigation) thì hãy chọn phần này, nếu không thì để trống.",
-  "price_list_categories": "Danh mục bảng giá",
-  "create_catalog": "Tạo mới danh mục bảng giá",
-  "update_catalog": "Cập nhật danh mục bảng giá",
-  "deactivate": "Tạm dừng",
-  "platform_transfer": "Chuyển giao nền tảng",
-  "price_list_config": "Cấu hình bảng giá",
-  "price_list": "Bảng giá",
-  "create_price_list": "Tạo mới bảng giá",
-  "update_price_list": "Cập nhât bảng giá",
-  "price_name": "Tên bảng giá",
-  "settlement_date": "Ngày kết toán trong tháng"
+  "zoom_password": "Mật khẩu phòng Zoom"
 }
