update localization files

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -81,7 +81,11 @@
   "banking_online": "Banking online",
   "banner": "Banner",
   "banner_link": "Banner link",
+  "benefit_package": "Benefit package",
+  "benefit_package_list": "Benefit package list",
+  "benefit_package_name": "Benefit package name",
   "big_courses": "Big courses",
+  "business_empower": "Empowering Business",
   "by_date": "By date",
   "by_learners": "By learners",
   "by_month": "By month",
@@ -133,6 +137,7 @@
   "community_category": "Community category",
   "community_name": "Community name",
   "complete": "Complete",
+  "configure_benefit_package": "Configure benefit package",
   "confirm": "Confirm",
   "contact_request_list": "Contact requests",
   "contact_requests": "Contact requests",
@@ -154,6 +159,7 @@
   "course_type": "Course type",
   "courses": "Courses",
   "cpa": "CPA",
+  "create_benefit_package": "Create a new benefit package",
   "create_catalog": "Create a new price list category",
   "create_price_list": "Create a new price list",
   "created_at": "Created at",
@@ -448,6 +454,7 @@
   "payment_method_list": "Payment methods",
   "payment_methods": "Payment methods",
   "payment_status": "Payment status",
+  "payment_updates": "Payment updates",
   "payment_verification": "Payment verification",
   "pending": "Pending",
   "perk": "Perk",
@@ -500,6 +507,8 @@
   "price_list_categories": "Price list categories",
   "price_list_config": "Price List Configuration",
   "price_name": "The price list name",
+  "price_one_year": "Price for 1 year",
+  "price_six_months": "Price 6 months",
   "processed": "Processed",
   "product_course": "Product/Course",
   "product_group": "Product group",
@@ -666,6 +675,7 @@
   "tier_name": "Tier name",
   "tier_price": "Tier price",
   "tiered_courses": "Tiered courses",
+  "time": "Time",
   "title": "Title",
   "total": "Total",
   "total_budget": "Total budget",
@@ -689,6 +699,7 @@
   "unregistered": "Unregistered",
   "unsend": "Unsend",
   "unverified": "Unverified",
+  "update_benefit_package": "Update benefit package",
   "update_catalog": "Updating the price list list",
   "update_payment": "Update payment",
   "update_permission_of_organization": "Update permission of organization",
@@ -787,26 +798,5 @@
   "zalo_messages_sent": "Sent messages on Zalo",
   "zoom_id": "ID of Zoom room",
   "zoom_link": "Zoom Link",
-  "zoom_password": "Password of Zoom room",
-  "price_list_categories": "Price list categories",
-  "create_catalog": "Create a new price list category",
-  "update_catalog": "Updating the price list list",
-  "deactivate": "Deactivate",
-  "platform_transfer": "Platform Transfer",
-  "price_list_config": "Price List Configuration",
-  "price_list": "Price List",
-  "create_price_list": "Create a new price list",
-  "update_price_list": "Update price list",
-  "price_name": "The price list name",
-  "settlement_date": "Settlement date of the month",
-  "benefit_package": "Benefit package",
-  "benefit_package_list": "Benefit package list",
-  "create_benefit_package": "Create a new benefit package",
-  "update_benefit_package": "Update benefit package",
-  "configure_benefit_package": "Configure benefit package",
-  "benefit_package_name": "Benefit package name",
-  "price_six_months": "Price 6 months",
-  "price_one_year": "Price for 1 year",
-  "business_empower": "Empowering Business",
-  "payment_updates": "Payment updates"
+  "zoom_password": "Password of Zoom room"
 }
