--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -57,7 +57,6 @@
   "agency_code": "Mã đại lý",
   "agency_list": "Danh sách đại lý",
   "agent": "Thuộc đại lý",
-  "agent_code": "Mã đại lý",
   "apply": "Áp dụng",
   "approve_order": "Duyệt đơn hàng",
   "approve_payment_request": "Xác nhận yêu cầu thanh toán",
@@ -82,7 +81,11 @@
   "banking_online": "Thanh toán ngân hàng",
   "banner": "Ảnh banner",
   "banner_link": "Đường dẫn ảnh banner",
+  "benefit_package": "Nhóm quyền lợi",
+  "benefit_package_list": "Danh mục nhóm quyền lợi",
+  "benefit_package_name": "Tên nhóm quyền lợi",
   "big_courses": "Khóa học lớn",
+  "business_empower": "Trao quyền kinh doanh",
   "by_date": "Theo ngày",
   "by_learners": "Theo học viên",
   "by_month": "Theo tháng",
@@ -105,7 +108,7 @@
   "caring_by": "Nhân viên chăm sóc",
   "caring_e_learners": "Danh sách học viên e-learning đang chăm",
   "caring_learners": "Danh sách học viên đang chăm sóc",
-"category": "Danh mục",
+  "category": "Danh mục",
   "category_icon": "Icon danh mục",
   "category_name": "Tên danh mục",
   "certificate": "Chứng chỉ",
@@ -134,6 +137,7 @@
   "community_category": "Danh mục cộng đồng",
   "community_name": "Tên cộng đồng",
   "complete": "Hoàn thành",
+  "configure_benefit_package": "Cấu hình nhóm quyền lợi",
   "confirm": "Xác nhận",
   "contact_request_list": "Danh sách yêu cầu liên hệ",
   "contact_requests": "Yêu cầu liên hệ",
@@ -155,6 +159,7 @@
   "course_type": "Loại khoá học",
   "courses": "Khóa học",
   "cpa": "CPA",
+  "create_benefit_package": "Tạo mới nhóm quyền lợi",
   "create_catalog": "Tạo mới danh mục bảng giá",
   "create_price_list": "Tạo mới bảng giá",
   "created_at": "Ngày đăng ký",
@@ -449,6 +454,7 @@
   "payment_method_list": "Danh sách phương thức thanh toán",
   "payment_methods": "Phương thức thanh toán",
   "payment_status": "Trạng thái thanh toán",
+  "payment_updates": "Cập nhật thanh toán",
   "payment_verification": "Xác thực thanh toán",
   "pending": "Chưa giải quyết",
   "perk": "Quyền lợi",
@@ -501,6 +507,8 @@
   "price_list_categories": "Danh mục bảng giá",
   "price_list_config": "Cấu hình bảng giá",
   "price_name": "Tên bảng giá",
+  "price_one_year": "Giá 1 năm",
+  "price_six_months": "Giá 6 tháng",
   "processed": "Đã xử lý",
   "product_course": "Sản phẩm/Khoá học",
   "product_group": "Nhóm sản phẩm",
@@ -667,6 +675,7 @@
   "tier_name": "Tên hạng",
   "tier_price": "Chính sách giá",
   "tiered_courses": "Khóa học phễu",
+  "time": "Thời gian",
   "title": "Tiêu đề",
   "total": "Tổng có",
   "total_budget": "Tổng ngân sách",
@@ -690,6 +699,7 @@
   "unregistered": "Chưa có tài khoản",
   "unsend": "Chưa gửi",
   "unverified": "Chưa xác thực",
+  "update_benefit_package": "Cập nhật nhóm quyền lợi",
   "update_catalog": "Cập nhật danh mục bảng giá",
   "update_payment": "Cập nhật thanh toán",
   "update_permission_of_organization": "Cập nhật quyền tổ chức",
@@ -788,26 +798,5 @@
   "zalo_messages_sent": "Đã gửi tin nhắn Zalo",
   "zoom_id": "ID phòng Zoom",
   "zoom_link": "Link Zoom",
-  "zoom_password": "Mật khẩu phòng Zoom",
-  "price_list_categories": "Danh mục bảng giá",
-  "create_catalog": "Tạo mới danh mục bảng giá",
-  "update_catalog": "Cập nhật danh mục bảng giá",
-  "deactivate": "Tạm dừng",
-  "platform_transfer": "Chuyển giao nền tảng",
-  "price_list_config": "Cấu hình bảng giá",
-  "price_list": "Bảng giá",
-  "create_price_list": "Tạo mới bảng giá",
-  "update_price_list": "Cập nhât bảng giá",
-  "price_name": "Tên bảng giá",
-  "settlement_date": "Ngày kết toán trong tháng",
-  "benefit_package": "Nhóm quyền lợi",
-  "benefit_package_list": "Danh mục nhóm quyền lợi",
-  "create_benefit_package": "Tạo mới nhóm quyền lợi",
-  "update_benefit_package": "Cập nhật nhóm quyền lợi",
-  "configure_benefit_package": "Cấu hình nhóm quyền lợi",
-  "benefit_package_name": "Tên nhóm quyền lợi",
-  "price_six_months": "Giá 6 tháng",
-  "price_one_year": "Giá 1 năm",
-  "business_empower": "Trao quyền kinh doanh",
-  "payment_updates": "Cập nhật thanh toán"
+  "zoom_password": "Mật khẩu phòng Zoom"
 }
