feature: add pricel list config

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -770,5 +770,8 @@
   "price_six_months": "Price 6 months",
   "price_one_year": "Price for 1 year",
   "business_empower": "Empowering Business",
-  "payment_updates": "Payment updates"
+  "payment_updates": "Payment updates",
+  "collaborators_page": "Collaborators Page",
+  "retail_site": "Retail Site",
+  "price_list_dis": "Configure price list display"
 }
