--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -771,5 +771,8 @@
   "price_six_months": "Giá 6 tháng",
   "price_one_year": "Giá 1 năm",
   "business_empower": "Trao quyền kinh doanh",
-  "payment_updates": "Cập nhật thanh toán"
+  "payment_updates": "Cập nhật thanh toán",
+  "collaborators_page": "Trang cộng tác viên",
+  "retail_site": "Trang bán lẻ",
+  "price_list_dis": "Cấu hình hiển thị bảng giá"
 }
