add bao kim payment

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -822,5 +822,6 @@
   "payment_updates": "Payment updates",
   "collaborators_page": "Collaborators Page",
   "retail_site": "Retail Site",
-  "price_list_dis": "Configure price list display"
+  "price_list_dis": "Configure price list display",
+  "bao_kim": "Bao Kim e-wallet"
 }
