--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -822,5 +822,6 @@
   "payment_updates": "Cập nhật thanh toán",
   "collaborators_page": "Trang cộng tác viên",
   "retail_site": "Trang bán lẻ",
-  "price_list_dis": "Cấu hình hiển thị bảng giá"
+  "price_list_dis": "Cấu hình hiển thị bảng giá",
+  "bao_kim": "Thanh toán Bảo Kim"
 }
